--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,24 +4,25 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-         
-        <activity android:name=".NFCTagSample" android:label="@string/app_name">
-          <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-          </intent-filter>
-         </activity>
-        
         <activity android:name="NFCFeliCaReader" android:label="@string/app_name">
+          <!--  
           <intent-filter>
             <action android:name="android.nfc.action.TAG_DISCOVERED" />
             <category android:name="android.intent.category.DEFAULT" />
           </intent-filter>
+           -->
+          <intent-filter>
+            <action android:name="android.nfc.action.TECH_DISCOVERED" />
+          </intent-filter>
+          <meta-data android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter"
+          />
           <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
           </intent-filter>
        </activity>
+        <activity android:name="FeliCaLiteWriter"/>
      </application>
     <uses-permission android:name="android.permission.NFC" />
     <uses-feature android:name="android.hardware.nfc" android:required="true" />
