--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nfc-felica</name>
+	<name>nfc-felica-2.3.2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -32,9 +32,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>nfc-felica-lib-2.3.3_src</name>
+			<name>nfc-felica-lib-2.3.2_src</name>
 			<type>2</type>
-			<locationURI>_android_nfc_felica_lib_2_3_3_29f269e3/src</locationURI>
+			<locationURI>_android_nfc_felica_lib_2_3_2_29f269e2/src</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
