--- a/.project
+++ b/.project
@@ -32,6 +32,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>nfc-felica-lib-2.3.3_src</name>
+			<type>2</type>
+			<locationURI>_android_nfc_felica_lib_2_3_3_29f269e3/src</locationURI>
+		</link>
+		<link>
 			<name>nfc-felica-lib_src</name>
 			<type>2</type>
 			<locationURI>_android_nfc_felica_lib_43747774/src</locationURI>
